# auth_service/internal/delivery/handlers/password_recovery.go
@@ -3,19 +3,32 @@ package handlers
 import (
 	"CourseProject/auth_service/internal/database"
 	customLogger "CourseProject/auth_service/pkg/log"
+	"errors"
 	"github.com/gin-gonic/gin"
+	"github.com/redis/go-redis/v9"
 	"golang.org/x/crypto/bcrypt"
 	"net/http"
+	"time"
 )
 
 type PassRecoveryServer struct {
 	verifyCodeStorage *database.VerifyCodeStorage
 	userStorage       database.UserStorage
 	logger            *customLogger.Logger
+	verifyCodePrefix  string
+	resetStatusPrefix string
 }
 
 func NewPassRecoveryServer(verifyCodeStorage *database.VerifyCodeStorage, userStorage database.UserStorage, logger *customLogger.Logger) *PassRecoveryServer {
-	return &PassRecoveryServer{verifyCodeStorage: verifyCodeStorage, userStorage: userStorage, logger: logger}
+	verifyCodePrefix := "verify_code"
+	resetStatusPrefix := "reset_status"
+	return &PassRecoveryServer{
+		verifyCodeStorage: verifyCodeStorage,
+		userStorage:       userStorage,
+		logger:            logger,
+		verifyCodePrefix:  verifyCodePrefix,
+		resetStatusPrefix: resetStatusPrefix,
+	}
 }
 
 type codeInput struct {
@@ -23,7 +36,7 @@ type codeInput struct {
 	Code  string
 }
 
-// @Summary Verify Code
+// @Summary Validate Code
 // @Description compare passed code with the saved one
 // @Tags recovery
 // @Accept json
@@ -31,15 +44,15 @@ type codeInput struct {
 // @Param code body codeInput true "code and email of the user for recovery"
 // @Success 200 {nil} nil "code is valid"
 // @Failure 400 {nil} nil "invalid code"
-// @Router /password/verify [post]
-func (rs *PassRecoveryServer) VerifyCode(ctx *gin.Context) {
+// @Router /password/validate-code [post]
+func (rs *PassRecoveryServer) ValidateCode(ctx *gin.Context) {
 	var input codeInput
 	if err := ctx.BindJSON(&input); err != nil {
 		rs.logger.ErrorLogger.Error().Msgf("unable to get input for verification: %s", err)
 		ctx.Writer.WriteHeader(http.StatusBadRequest)
 		return
 	}
-	codeFromDB, err := rs.verifyCodeStorage.Get(input.Email)
+	codeFromDB, err := rs.verifyCodeStorage.GetWithPrefix(rs.verifyCodePrefix, input.Email)
 	if err != nil {
 		rs.logger.ErrorLogger.Error().Msg(err.Error())
 		ctx.Writer.WriteHeader(http.StatusInternalServerError)
@@ -50,7 +63,14 @@ func (rs *PassRecoveryServer) VerifyCode(ctx *gin.Context) {
 		ctx.Writer.WriteHeader(http.StatusBadRequest)
 		return
 	}
-	if err = rs.verifyCodeStorage.Delete(input.Email); err != nil {
+	if err = rs.verifyCodeStorage.DeleteWithPrefix(rs.verifyCodePrefix, input.Email); err != nil {
+		rs.logger.ErrorLogger.Error().Msg(err.Error())
+		ctx.Writer.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	resetExpTime := time.Now().Add(10 * time.Minute).UTC()
+	if err = rs.verifyCodeStorage.PostWithPrefix(rs.resetStatusPrefix, input.Email, "valid", resetExpTime); err != nil {
 		rs.logger.ErrorLogger.Error().Msg(err.Error())
 		ctx.Writer.WriteHeader(http.StatusInternalServerError)
 		return
@@ -59,7 +79,6 @@ func (rs *PassRecoveryServer) VerifyCode(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{
 		"email": input.Email,
 	})
-
 }
 
 type passwordInput struct {
@@ -67,19 +86,34 @@ type passwordInput struct {
 	Password string `json:"password" binding:"required"`
 }
 
-// @Summary Update Password
+// @Summary Reset Password
 // @Description update password for registered user
 // @Tags recovery
 // @Accept json
 // @Param password body passwordInput true "password and email of the user for recovery"
 // @Success 200 {nil} nil "password is valid"
 // @Failure 400 {nil} nil "invalid code"
-// @Router /password/update [post]
-func (rs *PassRecoveryServer) UpdatePassword(ctx *gin.Context) {
+// @Router /password/reset [post]
+func (rs *PassRecoveryServer) ResetPassword(ctx *gin.Context) {
 	var input passwordInput
 	if err := ctx.BindJSON(&input); err != nil {
 		rs.logger.ErrorLogger.Error().Msgf("unable to get input for updating password: %s", err)
 		ctx.Writer.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	if _, err := rs.verifyCodeStorage.GetWithPrefix(rs.resetStatusPrefix, input.Email); err != nil {
+		if errors.Is(err, redis.Nil) {
+			rs.logger.ErrorLogger.Error().Msg("unable to find this email with reset_status prefix in redis: pair is not set")
+			ctx.Writer.WriteHeader(http.StatusUnauthorized)
+			return
+		}
+		rs.logger.ErrorLogger.Error().Msgf("error fetching reset status: %s", err)
+		ctx.Writer.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+	if err := rs.verifyCodeStorage.DeleteWithPrefix(rs.resetStatusPrefix, input.Email); err != nil {
+		rs.logger.ErrorLogger.Error().Msg(err.Error())
+		ctx.Writer.WriteHeader(http.StatusInternalServerError)
 		return
 	}
 	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(input.Password), bcrypt.DefaultCost)
